# alecc

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.sh
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
benches/: compilation_benchmark.rs
examples/: fibonacci.c  hello.c  sorting.c
examples/tests/: address_test.c  advanced_pointers_test.c  array_advanced_test.c  array_as_ptr_test.c  array_debug.c  array_ptr_test.c  array_test.c  basic_function_test.c  bitwise_test.c  bubble_sort_test.c  complex_ptr_test.c  compound_operators_test.c  comprehensive_test.c  debug_else_only.c  debug_expr_test.c  debug_if_only.c  debug_printf.c  debug_recursion_test.c  deref_test.c  double_printf.c  edge_case_test.c  even_test.c  exact_repro_test.c  explicit_return_test.c  factorial_test.c  fibonacci_no_printf.c  fibonacci_simple.c  fibonacci_test.c  final_success_test.c  final_summary_test.c  final_test.c  for_loop_final_test.c  for_loop_test.c  format_test.c  function_no_params_test.c  function_test.c  if_else_return_test.c  if_else_return_test_fixed.c  if_else_test.c  if_only.c  (+44 more)
src/: cli.rs  codegen.rs  compiler.rs  error.rs  lexer.rs  lib.rs  linker.rs  main.rs  optimizer.rs  parser.rs  targets.rs
tests/: integration_tests.rs
